referentes a login, cadastro, pagina inicial

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header class="app-header">
-    <img src="./assets/logo.png" width="250" height="250">
+    <img [src]="imgpath" class="img-logo">
     <p>Apoio à Doação</p>
 </header>
