--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Matemasie&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import "../../../colors.css";
+@import "./assets/colors.css";
+:root{
+    --fonte_p: 1.2rem;
+    --fonte_m: 1.4rem;
+    --fonte_g: 1.6rem;
+    --fonte_gg: 2rem;
+    --fonte_gg: 3.2rem;
+}
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+bgc-azul{
+    background-color: var(--bluelight);
+}
+.img-p{
+    width: 200px;
+}
+.fonte-media{
+ font-size: var(--fonte_m);
+}
+.bgc-azul{
+    background-color: rgba(49, 49, 253, 0.603);
 }
