--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header class="app-header">
-    <img src="./assets/logo.png" width="250" height="250">
-    <p>Apoio à Doação</p>
+    <img [src]="imgpath" class="img-logo">
+    <h3>Apoio à Doação</h3>
 </header>
