--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,24 @@
-<app-header></app-header>
-<main>
-    <section class="main-section">
-        <div class="headline">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iure, dolore sed corporis hic asperiores dolorem architecto, recusandae eius nobis debitis? Et modi mollitia voluptates nobis incidunt beatae blanditiis. Unde!</h1>
-        </div>
-    </section>
-</main>
+
+<body>
+    <app-header></app-header>
+    <main class="c-main">
+        <section class="main-section">
+            <div class="headline linha">
+                <div class="coluna-1">
+                    <h1>Encontre uma instituição para doar</h1>
+                    <img class="img-p" src="https://img.freepik.com/vetores-gratis/maos-segurando-coracao-vermelho-amor-cuidado-familia-protegem-poster-ilustracao-vetorial_1284-2324.jpg?t=st=1731802186~exp=1731805786~hmac=f164a58baff0c0a61550a4fd5e053a3948adf3951875dcfd8114dbd09f60fe8d&w=740" alt="">
+                </div>
+                <div class="coluna-1">
+                    <h1>Cadastre sua instituição aqui</h1>
+                    <img class="img-p" src="https://img.freepik.com/vetores-gratis/fundo-de-aperto-de-mao-em-estilo-simples_23-2147785751.jpg?t=st=1731801893~exp=1731805493~hmac=032e7ee283b02138e9d9071d2faec53364d1cba42c367befadeffda352a6750b&w=740" alt="">
+                </div>
+                <br>
+
+            </div>
+            <a routerLink="/login" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Login</button></a><br>
+            <a routerLink="/signup" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Signup</button></a><br>
+         
+        </section>
+    </main>
+    <app-footer></app-footer>
+</body>
