--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
     
                 <button class="btn-pattern mar-cima-1" type="submit">Entrar</button>
             </form>
-    
+            <a href="#" class="have-account">Criar conta</a><br>
             <a href="#" class="forgot-password">Esqueci a senha</a>
         </section>
     </main>
