change colors - create navbar

--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -8,6 +8,7 @@
     --yellow: #e2df0e;
     --gray1: #e6e6e6;
     --gray2: #b9b9b9;
+    --gray3: #a0a0a0;
 }
 .fundo-azul{
     background-color: var(--bluelight);
