estilo e criacao de components

--- a/src/app/components/deleteaccount/deleteaccount.component.html
+++ b/src/app/components/deleteaccount/deleteaccount.component.html
@@ -2,11 +2,11 @@
     <app-header></app-header>
     <main class="c-main">
         <section>
-            <h2>Excluir conta</h2>
+            <div class="d-f"><img class="seta mar-r-l" src="seta-esquerda.png" alt=""><h2>Excluir conta</h2></div>
             <p>Informe sua senha para continuar essa ação!</p>
             <form action="" method="post">
                 <label  for="senha">
-                    <input class="caixa-texto-p mar-cima-1 mar-baixo-1" type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
+                    <input class="caixa-texto-p mar-baixo-1" type="password" name="senha" id="senha" placeholder="Digite sua senha" required>
                 </label>
                 <button class="btn-pattern mar-cima-1" type="submit">Excluir</button>
             </form>
