--- a/src/app/components/editaccount/editaccount.component.html
+++ b/src/app/components/editaccount/editaccount.component.html
@@ -2,16 +2,16 @@
     <app-header></app-header>
     <main class="c-main">
         <section>
-            <h2>Editar conta</h2>
+            <div class="d-f"><img class="seta mar-r-l" src="seta-esquerda.png" alt=""><h2>Editar conta</h2></div>
             <form action="" method="post">
                 <label  for="nome">Nome</label>
-                <input class="caixa-texto-p mar-cima-1 mar-baixo-1" type="text" name="nome" id="nome" placeholder="Digite seu novo nome">
+                <input class="caixa-texto-p mar-baixo-1" type="text" name="nome" id="nome" placeholder="Digite seu novo nome">
                 <label  for="email">E-mail</label>
-                <input class="caixa-texto-p mar-cima-1 mar-baixo-1" type="email" name="email" id="email" placeholder="Digite seu novo email">
+                <input class="caixa-texto-p mar-baixo-1" type="email" name="email" id="email" placeholder="Digite seu novo email">
                 <label  for="senha">Senha</label>
-                <input class="caixa-texto-p mar-cima-1 mar-baixo-1" type="password" name="senha" id="senha" placeholder="Digite sua nova senha">
+                <input class="caixa-texto-p mar-baixo-1" type="password" name="senha" id="senha" placeholder="Digite sua nova senha">
                 <label  for="confirm">Confirmar senha</label>
-                <input class="caixa-texto-p mar-cima-1 mar-baixo-1" type="password" name="confirm" id="confirm" placeholder="Digite sua nova senha novamente">
+                <input class="caixa-texto-p mar-baixo-1" type="password" name="confirm" id="confirm" placeholder="Digite sua nova senha novamente">
                 <label for="save"></label>
                 <input type="checkbox" name="save" id="save" required>Salvar alterações
                 <button class="btn-pattern mar-cima-1" type="submit">Editar</button>
