--- a/src/app/components/navegacao/navegacao.component.html
+++ b/src/app/components/navegacao/navegacao.component.html
@@ -32,5 +32,6 @@
         <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
       </form>
+      <img class="mar-r-l largura-1 border-hover" src="user.png" alt="">
     </div>
 </nav>
