--- a/src/app/components/signupinstituicao/signupinstituicao.component.html
+++ b/src/app/components/signupinstituicao/signupinstituicao.component.html
@@ -2,22 +2,19 @@
     <app-header></app-header>
     <main class="c-main">
         <section>
-            <h2>Cadastre-se</h2>
+            <div class="d-f"><img class="seta mar-r-l" src="seta-esquerda.png" alt=""><h2>Cadastre-se</h2></div>
             
             <form #signupForm="ngForm">
 
-                
                 <label for="description">Descrição</label>
-                <textarea class="caixa-texto-p mar-cima-1 mar-baixo-1" id="description" name="description" placeholder="Descreva sua instituição" ngModel required rows=6 cols=55></textarea>
+                <textarea class="caixa-texto-p mar-baixo-1" id="description" name="description" placeholder="Descreva sua instituição" ngModel required rows=6 cols=55></textarea>
                 
                 <label for="cpfcnpj">CPF/CNPJ</label>
-                <input class="caixa-texto-p mar-cima-1 mar-baixo-1" type="text" id="cpfcnpj" name="cpfcnpj" placeholder="CPF ou CNPJ da instituição" ngModel required email>
+                <input class="caixa-texto-p mar-baixo-1" type="text" id="cpfcnpj" name="cpfcnpj" placeholder="CPF ou CNPJ da instituição" ngModel required email>
 
-                
                 <label for="location">Localização</label>
-                <input class="caixa-texto-p mar-cima-1 mar-baixo-1" type="text" id="location" name="location" placeholder="Localização da instituição" ngModel required >
+                <input class="caixa-texto-p mar-baixo-1" type="text" id="location" name="location" placeholder="Localização da instituição" ngModel required >
 
-                
                 <button class="btn-pattern mar-cima-1" type="submit">Cadastrar</button>
             </form>
 
