--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,14 +2,14 @@
     <app-header></app-header>
     <main class="c-main">
         <section>
-            <h2>Login</h2>
+            <div class="d-f"><img class="seta mar-r-l" src="seta-esquerda.png" alt=""><h2>Login</h2></div>
             <form #loginForm="ngForm" (ngSubmit)="submitData(loginForm)">
            
-                <label for="username">Nome</label>
-                <input class="caixa-texto-p mar-cima-1 mar-baixo-1" type="username" id="username" name="username" placeholder="Digite seu e-mail" required ngModel>
+                <label for="username">E-mail</label>
+                <input class="caixa-texto-p mar-baixo-1" type="e-mail" id="e-mail" name="e-mail" placeholder="Digite seu e-mail" required ngModel>
 
                 <label for="password">Senha</label>
-                <input class="caixa-texto-p mar-cima-1 mar-baixo-1" type="password" id="password" name="password" placeholder="Digite sua senha" required ngModel>
+                <input class="caixa-texto-p mar-baixo-1" type="password" id="password" name="password" placeholder="Digite sua senha" required ngModel>
             
     
                 <button class="btn-pattern mar-cima-1" type="submit">Entrar</button>
