Signup + Login changes

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,8 +5,8 @@
             <div class="d-f"><img class="seta mar-r-l" src="seta-esquerda.png" alt=""><h2>Login</h2></div>
             <form #loginForm="ngForm" (ngSubmit)="submitData(loginForm)">
            
-                <label for="username">E-mail</label>
-                <input class="caixa-texto-p mar-baixo-1" type="e-mail" id="e-mail" name="e-mail" placeholder="Digite seu e-mail" required ngModel>
+                <label for="username">Nome de usuário</label>
+                <input class="caixa-texto-p mar-baixo-1" type="username" id="username" name="username" placeholder="Digite seu nome de usuário" required ngModel>
 
                 <label for="password">Senha</label>
                 <input class="caixa-texto-p mar-baixo-1" type="password" id="password" name="password" placeholder="Digite sua senha" required ngModel>
