--- a/src/app/components/signupinstituicao/signupinstituicao.component.html
+++ b/src/app/components/signupinstituicao/signupinstituicao.component.html
@@ -7,7 +7,7 @@
             <form #signupForm="ngForm">
 
                 <label for="description">Descrição</label>
-                <textarea class="caixa-texto-p mar-baixo-1" id="description" name="description" placeholder="Descreva sua instituição" ngModel required rows=6 cols=55></textarea>
+                <textarea class="caixa-texto-p mar-baixo-1" id="description" name="description" placeholder="Descreva sua instituição. Ex: dados para contato, endereço, entre outros" ngModel required rows=6 cols=55></textarea>
                 
                 <label for="cpfcnpj">CPF/CNPJ</label>
                 <input class="caixa-texto-p mar-baixo-1" type="text" id="cpfcnpj" name="cpfcnpj" placeholder="CPF ou CNPJ da instituição" ngModel required email>
