Signup fix + Signup institution

--- a/src/app/components/signupinstituicao/signupinstituicao.component.html
+++ b/src/app/components/signupinstituicao/signupinstituicao.component.html
@@ -4,7 +4,7 @@
         <section>
             <div class="d-f"><img class="seta mar-r-l" src="seta-esquerda.png" alt=""><h2>Cadastre-se</h2></div>
             
-            <form #signupForm="ngForm">
+            <form #signupInstitutionForm="ngForm" (ngSubmit)="submitData(signupInstitutionForm)">
 
                 <label for="description">Descrição</label>
                 <textarea class="caixa-texto-p mar-baixo-1" id="description" name="description" placeholder="Descreva sua instituição. Ex: dados para contato, endereço, entre outros" ngModel required rows=6 cols=55></textarea>
@@ -13,7 +13,10 @@
                 <input class="caixa-texto-p mar-baixo-1" type="text" id="cpfcnpj" name="cpfcnpj" placeholder="CPF ou CNPJ da instituição" ngModel required email>
 
                 <label for="location">Localização</label>
-                <input class="caixa-texto-p mar-baixo-1" type="text" id="location" name="location" placeholder="Localização da instituição" ngModel required >
+                <input class="caixa-texto-p mar-baixo-1" type="number" id="lat" name="lat" placeholder="Latitude" ngModel required >
+
+                <label for="location">Localização</label>
+                <input class="caixa-texto-p mar-baixo-1" type="number" id="long" name="long" placeholder="Longitude" ngModel required >
 
                 <button class="btn-pattern mar-cima-1" type="submit">Cadastrar</button>
             </form>
