--- a/src/app/components/navegacao/navegacao.component.html
+++ b/src/app/components/navegacao/navegacao.component.html
@@ -28,10 +28,7 @@
           <a class="nav-link disabled" href="#">Desativado</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-      </form>
       <img class="mar-r-l largura-1 border-hover" src="user.png" alt="">
+      <button class="btn btn-pattern my-2 my-sm-0" (click)="logout()">Logout</button>
     </div>
 </nav>
