--- a/src/app/components/apoioadoacao/apoioadoacao.component.html
+++ b/src/app/components/apoioadoacao/apoioadoacao.component.html
@@ -5,19 +5,8 @@
     <app-header></app-header>
     <main class="c-main">
         <section class="main-section">
-            <ul class="slider">
-                <li>
-                      <input type="radio" id="slide1" name="slide" checked>
-                      <label for="slide1"></label>
-                      <img src="img_doacao.png" />
-                </li>
-                <li>
-                      <input type="radio" id="slide2" name="slide">
-                      <label for="slide2"></label>
-                      <img src="aperto_mao.png" />
-                </li>
-                
-            </ul>
+            <app-carousel></app-carousel>
+
             <a routerLink="/login" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Login</button></a><br>
             <a routerLink="/signup" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Cadastrar</button></a><br>
          
