--- a/src/app/components/apoioadoacao/apoioadoacao.component.html
+++ b/src/app/components/apoioadoacao/apoioadoacao.component.html
@@ -1,4 +1,5 @@
 
+
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 <body>
@@ -7,9 +8,23 @@
         <section class="main-section">
             <app-carousel></app-carousel>
 
+            <ul class="slider">
+                <li>
+                      <input type="radio" id="slide1" name="slide" checked>
+                      <label for="slide1"></label>
+                      <img src="img_doacao.png" />
+                </li>
+                <li>
+                      <input type="radio" id="slide2" name="slide">
+                      <label for="slide2"></label>
+                      <img src="aperto_mao.png" />
+                </li>
+                
+            </ul>
             <a routerLink="/login" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Login</button></a><br>
             <a routerLink="/signup" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Cadastrar</button></a><br>
          
+
         </section>
     </main>
     
