--- a/src/app/components/homedoador/homedoador.component.css
+++ b/src/app/components/homedoador/homedoador.component.css
@@ -19,6 +19,57 @@ label{
     justify-items: center;
     min-height: 100vh;
 }
+
 .w-c{
     height: 400px;
+}
+.custom-ng-select {
+   width: 100%;
+  border: 1px solid #b3b3b3;
+  border-radius: 8px;
+}
+.custom-ng-select .ng-select-container {
+  padding: 8px;
+  background-color: #ffffff;
+}
+  
+.custom-ng-select .ng-select-container .ng-placeholder {
+  color: #999;
+}
+  
+::ng-deep ng-select {
+  width: 100%;
+  border: 2px solid #007bff;
+  border-radius: 5px;
+  background-color: #f8f9fa;
+}
+  
+::ng-deep ng-select .ng-select-container {
+  padding: 8px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  font-size: 16px;
+}
+  
+::ng-deep ng-select .ng-select-container .ng-placeholder {
+  color: #888;
+}
+  
+::ng-deep ng-select .ng-select-container .ng-value {
+  color: #007bff;
+}
+  
+::ng-deep ng-select .ng-dropdown-panel {
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+  
+::ng-deep ng-select .ng-dropdown-panel .ng-option {
+  padding: 10px;
+  font-size: 16px;
+  background-color: #ffffff;
+}
+  
+::ng-deep ng-select .ng-dropdown-panel .ng-option:hover {
+  background-color: #e9ecef;
 }
