--- a/src/app/components/homedoador/homedoador.component.html
+++ b/src/app/components/homedoador/homedoador.component.html
@@ -1,6 +1,14 @@
 <body>
   <app-navegacao></app-navegacao>
   <main class="c-main">
+      <section>
+        <label for="addkeyword">Procure instituições pelo nome:</label>
+        <input (input)="onInput($event)" class="form-control mr-sm-2" placeholder="Pesquisar por instituições" aria-label="Pesquisar">
+        
+        <label for="addkeyword">Procure instituições por palavras-chave:</label>
+        <ng-select id="selectkeyword" class="custom-ng-select" [(ngModel)]="selectedKeyword" [items]="keywords" bindLabel="name" placeholder="Pesquise ou selecione uma palavra-chave" [searchable]="true" required name="keywordId" (ngModelChange)="onKeywordChange($event)" [compareWith]="compareKeywords" [clearable]="true"></ng-select>
+        <div ng-model="map" id="map-canvas" style="width: 600px; height: 500px;"></div>     
+      </section>
       <section class="w-c">
         <h4 class="t-center">Itens mais requisitados pelas instituições</h4>
         <app-word-cloud></app-word-cloud>
