--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,17 +2,12 @@
 
 <header class="app-header">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar d-f navbar-light bg-light">
         <a class="navbar-brand" href="#"><h3><img class="largura-1" src="logopng.png" alt="">Apoio a Doação</h3></a>
 
-        <div>
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sobre o site</a>
-            </li>
-          </ul>
-
-        </div>
+        
+        <a routerLink="/sobresite" class="mar-r-l-2">Sobre o site</a>
+    
     </nav>
 
 </header>
