--- a/src/app/components/signupinstituicao/signupinstituicao.component.html
+++ b/src/app/components/signupinstituicao/signupinstituicao.component.html
@@ -2,7 +2,7 @@
     <app-header></app-header>
     <main class="c-main">
         <section>
-            <div class="d-f"><img class="seta mar-r-l" src="seta-esquerda.png" alt=""><h2>Cadastre-se</h2></div>
+            <div class="d-f v-center"><img class="seta mar-r-l" src="seta-esquerda.png" alt=""><h2>Cadastre-se</h2></div>
             
             <form #signupInstitutionForm="ngForm" (ngSubmit)="submitData(signupInstitutionForm)">
 
