--- a/src/app/components/apoioadoacao/apoioadoacao.component.css
+++ b/src/app/components/apoioadoacao/apoioadoacao.component.css
@@ -10,6 +10,20 @@ body{
     padding: 0 50px 0;
     min-height: 100vh;
 }
+.container {
+    display: inline-block;
+    position: relative;
+    width: 500px;
+    margin: auto;
+}
+.container a img{
+    opacity: 0.6;
+    margin: auto;
+}
+.texto-img {
+    position: absolute;
+    top: 145px;
+}
 .linha{
     display: flex;
     width: 100%;
