--- a/src/app/components/apoioadoacao/apoioadoacao.component.html
+++ b/src/app/components/apoioadoacao/apoioadoacao.component.html
@@ -7,7 +7,8 @@
     <main class="c-main">
         <section class="main-section">
             <app-carousel></app-carousel>
-
+         
+            <a routerLink="/homedoador" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Explorar instituições</button></a><br>
             <a routerLink="/login" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Login</button></a><br>
             <a routerLink="/signup" ><button class="links-inicio mar-cima-1 alinhar-centro fonte-media">Cadastrar</button></a><br>
          
