--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,9 +4,11 @@
 
     <nav class="navbar d-f navbar-light bg-light">
         <a class="navbar-brand" href="#"><h3><img class="largura-1" src="logopng.png" alt="">Apoio a Doação</h3></a>
-
-        
-        <a routerLink="/sobresite" class="mar-r-l-2">Sobre o site</a>
+        <div>
+            <a routerLink="/login" class="mar-r-l-2">login</a>
+            <a routerLink="/signup" class="mar-r-l-2">Cadastro</a>
+            <a routerLink="/sobresite" class="mar-r-l-2">Sobre o site</a>
+        </div>
     
     </nav>
 
