--- a/src/app/components/homeinstituicao/homeinstituicao.component.html
+++ b/src/app/components/homeinstituicao/homeinstituicao.component.html
@@ -8,6 +8,7 @@
             <div *ngIf="success" class="success">
                 {{ success }}
             </div>
+            <div class="titulo_times d-f"><img class="tam_1" src="chave.png" alt=""><h2>Palavra<br>chave</h2></div>
             <form #addKey="ngForm" (ngSubmit)="addKeyWord(addKey)">
                 <label for="addkeyword">Escolha uma palavra-chave para adicionar:</label>
                 <ng-select id="addkeyword" class="custom-ng-select" [(ngModel)]="selectedKeyword" [items]="keywords" bindLabel="name" placeholder="Pesquise ou selecione uma palavra-chave" [searchable]="true" required name="keywordId" (ngModelChange)="onKeywordChange($event)" [compareWith]="compareKeywords" [clearable]="true"></ng-select>
