--- a/src/app/components/navegacao/navegacao.component.html
+++ b/src/app/components/navegacao/navegacao.component.html
@@ -1,12 +1,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar d-f navbar-light bg-light">
     <a class="navbar-brand" href="#"><h3><img class="largura-1" src="logopng.png" alt="">Apoio a Doação</h3></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-     
+    <div>
       <a routerLink="/profiledoador"><img class="mar-r-l largura-1 border-hover radius-pattern" src="user.png" alt=""></a>
       <button class="btn btn-pattern my-2 my-sm-0" (click)="logout()">Logout</button>
     </div>
