--- a/src/app/components/word-cloud/word-cloud.component.css
+++ b/src/app/components/word-cloud/word-cloud.component.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 600px;
+    height: 80%;
+    width: 100%;
     background-color: transparent;
 }
