Splash sreen, visualize donations institution

--- a/src/app/components/homeinstituicao/homeinstituicao.component.html
+++ b/src/app/components/homeinstituicao/homeinstituicao.component.html
@@ -31,7 +31,8 @@
                 <button class="btn-pattern mar-cima-1" type="submit">Remover</button>
             </form>
             <p></p>
-            <a routerLink="/criardoacao" ><button class="btn-pattern mar-cima-1" type="submit">Registrar doação</button></a>
+            <a routerLink="/registrardoacao" ><button class="btn-pattern mar-cima-1" type="submit">Registrar doação</button></a>
+            <a routerLink="/doacoesinstituicao" ><button class="btn-pattern mar-cima-1" type="submit">Visualizar doações</button></a>
         </section>
     </main>
     <app-footer></app-footer>
