--- a/src/app/components/registrardoacao/registrardoacao.component.html
+++ b/src/app/components/registrardoacao/registrardoacao.component.html
@@ -1,5 +1,5 @@
 <body>
-    <app-navegacao></app-navegacao>
+    <app-navinstituicao></app-navinstituicao>
     <main class="c-main">
         <section class="main-section">
             <div *ngIf="error" class="error">
